# diplom

./: .gitignore
back/: main.py  pyproject.toml  requirements.txt
back/enums/: __init__.py  model_mapping_enum.py  optimization_type_enum.py
back/exceptions/: __init__.py  base_exception.py  no_optimal_portfolio_exception.py  prediction_negative_stocks_exception.py  something_went_wrong_exception.py
back/models/: __init__.py  arima.py  base_model.py  neural_month.py
back/service/: __init__.py  calculate_portfolio_service.py  data_service.py  ticker_service.py
back/service/optimizers/: __init__.py  base_optimizer.py  min_volatility_optimizer.py  sharpe_optimizer.py
front/: package-lock.json  package.json
front/src/: App.vue  main.js
front/src/components/: Header.vue
front/src/plugins/: vuetify.js
front/src/router/: index.js
front/src/store/: api.js  index.js
front/src/store/modules/: formData.js  models.js  optimizers.js  predict.js  tickers.js
front/src/views/: ChartView.vue  HomeView.vue
