[tool.poetry]
name = "fastapiprojectdiploma"
version = "0.1.0"
description = ""
authors = ["Alexey <test@test.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
yfinance = "^0.1.70"
pyportfolioopt = "^1.5.2"
cvxopt = "^1.3.0"
cvxpy = "^1.2.0"
tensorflow = "^2.8.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
statsmodels = "^0.13.2"
scikit-learn = "^1.0.2"
translate = "^3.6.1"
gunicorn = "^20.1.0"
keras = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

